# fortran-acc-audit

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
fortran_acc_audit/: __init__.py  cli.py  extractor.py  schema.py
tests/: test_extractor.py
tests/fixtures/: sample_clean.F  sample_host_only.f90  sample_violation.F
